--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "relieve": "^2.1.3",
     "retry": "^0.10.1",
     "semver": "5.4.1",
-    "sqlite3": "^4.0.6",
+    "sqlite3": "^5.0.2",
     "stats-lite": "^2.0.4",
     "tiny-promisify": "^0.1.1",
     "toml": "^2.3.0",
@@ -44,10 +44,13 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.0",
+    "prettier": "2.3.2",
     "proxyquire": "^1.7.10",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "sinon": "^4.2.0"
+    "sinon": "^4.2.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.5"
   },
   "engines": {
     "node": ">=8.11.2"
