--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   ],
   "scripts": {
     "test": "./node_modules/.bin/mocha test/*.js --recursive test -u tdd --reporter spec",
-    "start": "node ./gekko --config config.js --ui"
+    "start": "tsc && node ./dist/gekko --config ./dist/config.js --ui"
   },
   "author": "Mike van Rossum <mike@mvr.me>",
   "dependencies": {
+    "@types/node": "^16.7.1",
     "async": "2.1.2",
     "bitfinex-api-node": "^1.2.1",
     "co-fs": "^1.2.0",
-    "commander": "^2.13.0",
+    "commander": "^8.1.0",
     "gekko": "0.0.9",
     "humanize-duration": "^3.10.0",
     "koa": "^1.2.0",
